fixed text issues and aligned it

--- a/src/styles/Modal.css
+++ b/src/styles/Modal.css
@@ -43,19 +43,16 @@
   justify-content: flex-end;
   width: 101%;
 }
-/* .carousel {
-  width: 100%;
-  height: 45%;
-  background: #4368d6;
-} */
+
 .modal-carousel > img {
   width: 100%;
   height: 100%;
 }
 aside {
-  height:32%;
+  height: 32%;
   width: 90%;
   margin-top: 1rem;
+  text-align: center;
 }
 aside > p {
   font-weight: 200;
